# Mastering-Cpp-Game-Animation-Programming

./: .cproject  .project  CMakeLists.txt  README.md  README_MSYS2.md
chapter01/: README.md
chapter01/01_opengl_assimp/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter01/01_opengl_assimp/model/: AssimpAnimChannel.cpp  AssimpAnimChannel.h  AssimpAnimClip.cpp  AssimpAnimClip.h  AssimpInstance.cpp  AssimpInstance.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  InstanceSettings.h  ModelAndInstanceData.h
chapter01/01_opengl_assimp/opengl/: Framebuffer.cpp  IndexBuffer.cpp  IndexBuffer.h  OGLRenderData.h  Shader.h  (+8 more)
chapter01/02_vulkan_assimp/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter01/02_vulkan_assimp/cmake/: FindAssimp.cmake
chapter01/02_vulkan_assimp/model/: AssimpAnimChannel.cpp  AssimpAnimClip.cpp  AssimpAnimClip.h  AssimpInstance.cpp  AssimpInstance.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  Model.cpp  ModelAndInstanceData.h
chapter01/02_vulkan_assimp/shader/: assimp.frag  assimp.vert  assimp_skinning.frag  assimp_skinning.vert
chapter01/02_vulkan_assimp/vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  IndexBuffer.cpp  Pipeline.cpp  PipelineLayout.cpp  PipelineLayout.h  Renderpass.cpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  SkinningPipeline.cpp  SkinningPipelineLayout.cpp  SkinningPipelineLayout.h  SyncObjects.cpp  Texture.cpp  UniformBuffer.cpp  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
chapter01/02_vulkan_assimp/window/: Window.h
chapter02/: README.md
chapter02/01_opengl_computeshader/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter02/02_vulkan_computeshader/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter03/: README.md
chapter03/01_opengl_selection/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter03/02_vulkan_selection/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter04/: README.md
chapter04/01_opengl_edit_view_mode/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter04/02_vulkan_edit_view_mode/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter05/: README.md
chapter05/01_opengl_load_save/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter05/02_vulkan_load_save/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter06/: README.md
chapter06/01_opengl_cameras/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter06/02_vulkan_cameras/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter07/: README.md
chapter07/01_opengl_animations/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter07/02_vulkan_animations/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter08/: README.md
chapter08/01_opengl_collisions/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter08/02_vulkan_collisions/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter09/: README.md
chapter09/01_opengl_behavior/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter09/02_vulkan_behavior/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter10/: README.md
chapter10/01_opengl_morphanim/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter10/02_vulkan_morphanim/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter11/: README.md
chapter11/01_opengl_level/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter11/02_vulkan_level/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter12/: README.md
chapter12/01_opengl_adv_collision/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter12/02_vulkan_adv_collision/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter13/: README.md
chapter13/01_opengl_navigation/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter13/02_vulkan_navigation/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter14/: README.md
chapter14/01_opengl_ideas/: .cproject  .project  CMakeLists.txt  CMakeSettings.json  Main.cpp  imgui.ini
chapter14/02_vulkan_ideas/: .cproject  .project  CMakeLists.txt  Main.cpp  controls.txt  imgui.ini
chapter14/02_vulkan_ideas/assets/music/: LICENSE.txt
chapter14/02_vulkan_ideas/assets/sounds/: LICENSE.txt
chapter14/02_vulkan_ideas/assets/waypointmarker/: traffic_cone_prop.glb
chapter14/02_vulkan_ideas/assets/woman/: Woman.gltf
chapter14/02_vulkan_ideas/config/: conf.acfg
chapter14/02_vulkan_ideas/graphnodes/: GraphEditor.cpp  RandomNavigationNode.h  WaitNode.cpp
chapter14/02_vulkan_ideas/model/: AssimpInstance.cpp  AssimpInstance.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  BehaviorData.h  BehaviorManager.cpp  InstanceSettings.h  SkyboxModel.cpp  SkyboxModel.h
chapter14/02_vulkan_ideas/octree/: TriangleOctree.h
chapter14/02_vulkan_ideas/shader/: assimp.vert  assimp_groundmesh.frag  assimp_instance_transform.comp  assimp_level.vert  assimp_selection.vert  assimp_skinning.frag  assimp_skinning.vert  assimp_skinning_morph.frag  assimp_skinning_morph.vert  assimp_skinning_morph_selection.frag  assimp_skinning_morph_selection.vert  assimp_skinning_selection.vert  skybox.frag  skybox.vert
chapter14/02_vulkan_ideas/textures/: LICENSE.txt
chapter14/02_vulkan_ideas/tools/: AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  PathFinder.cpp  PathFinder.h  Tools.cpp  Tools.h  YamlParser.cpp  YamlParser.h  YamlParserTypes.h
chapter14/02_vulkan_ideas/vulkan/: Callbacks.h  Enums.h  GroundMeshPipeline.cpp  GroundMeshPipeline.h  ModelInstanceCamData.h  SelectionRenderpass.cpp  Shader.cpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  SkyboxPipeline.cpp  SkyboxPipeline.h  Texture.cpp  Texture.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
chapter14/02_vulkan_ideas/window/: Window.cpp  Window.h
(+992 files in other folders)
